nickel-lang-lib/tests/integration/typecheck/fail/piecewise_signature.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# found = 'String'
{ foo : Number, foo = "bar" }